Site Responsivo e controle de menu com JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,14 +16,12 @@ header {
 }
 
 header .bg-gradient {
-    
     min-height: 300px;
-    width: 100%;
+    width: 100%;    
     background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',
-    GradientType=0 );
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); 
+    background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
 }
 
 header .header-border {
@@ -31,7 +29,7 @@ header .header-border {
     border-bottom: rgba(255,255,255,.25) 1px solid;
 }
 
-header #logo{
+header #logo {
     width: 200px;
     color: #fff;
     line-height: 60px;
@@ -39,20 +37,16 @@ header #logo{
     font-size: 2em;
     font-weight: bold;
     text-shadow: #000 1px 1px 8px;
-
 } 
-
 .menu {
     flex: 1;
 }
-
 .menu ul {
     display: flex;
     justify-content: flex-end;
     list-style: none;
     padding: 0;
 }
-
 .menu li {
     min-width: 100px;
     line-height: 28px;
@@ -62,11 +56,10 @@ header #logo{
     text-decoration: none;
     font-weight: bold;
     padding: 20px;
-
 }
 
 #register {
-    background-color: #fff;
+    background-color: #FFF;
     width: 100%;
     height: 400px;
     max-width: 350px;
@@ -94,8 +87,8 @@ header #logo{
 #register input {
     width: 100%;
     padding: .75rem 1rem;
-    border-radius: 4px; 
-    border: #ccc 1px solid;
+    border-radius: 4px;
+    border: #CCC 1px solid;
 }
 
 #register input[type=radio] {
@@ -105,8 +98,8 @@ header #logo{
 #register button {
     width: 100%;
     border: none;
-    background-color: #e67e22;
-    color: #fff;
+    background-color: #E67E22;
+    color: #FFF;
     padding: .75rem;
     font-size: 1.2em;
 }
@@ -120,8 +113,8 @@ header #logo{
 }
 
 .title h1 {
-    font-size: 3em;
-    border-bottom: #ccc 1px solid;
+    font-size:3em;
+    border-bottom: #CCC 1px solid;
     padding-bottom: 1rem;
 }
 .home p {
@@ -131,11 +124,11 @@ header #logo{
 footer {
     background-color: #f5f5f5;
     color: #6c757d;
-    font-size: 0.8em;
+    font-size: .8em;
 }
 
 footer p {
-    line-height: 35px;
+    line-height: 35px; 
 }
 
 footer .container {
@@ -144,4 +137,88 @@ footer .container {
 
 footer .menu a {
     color: #6c757d;
+}
+
+.menu .open-menu {
+    display: none;    
+}
+
+.backdrop {
+    display:none;
+}
+.close-menu {
+    display: none;
+}
+
+@media(max-width: 450px) {
+    .menu .close-menu {
+        display: block;
+        text-align: right;
+        background-color: #eee;
+    }
+    .menu .close-menu button {
+        background: none;
+        border: none;
+        font-size: 2em;
+        padding: .75rem 1rem;
+    }
+    .menu.open .backdrop {
+        opacity: .5;
+        display: block;
+    }
+    .menu .backdrop {
+        opacity: 0;
+        background-color: #000;
+        transition: opacity .15s linear;
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        z-index: 1;
+        left: 0;
+        top: 0;
+    }
+    header .header-border {
+        justify-content: space-between;
+    }
+    .menu ul {
+        display: block;
+        position: fixed;
+        top: 0;
+        right: -80vw;
+        width: 80vw;
+        height: 100vh;
+        background-color: #fff;
+        z-index: 2;
+        margin: 0;
+        transition: right .2s linear;
+    }
+    .menu.open ul {
+        right: 0;
+    }
+    .menu.open a {
+        color: #000;
+        padding: 20px;
+        display: block;
+        font-weight: 100;
+        border-bottom: #ccc 1px solid;
+    }
+    .menu {
+        width: 60px;
+        flex: initial;
+    }
+    .menu .open-menu {
+        display: block;
+        font-size: 2em;
+        padding: .9rem;
+        flex: 1;
+        background: none;
+        border: none;
+        color: #fff;
+    }
+    #register {
+        width: 90%;
+        margin: 0 5%;
+        max-width: initial;
+        right: initial;
+    }
 }
